flicker fix(?)

--- a/src/App.scss
+++ b/src/App.scss
@@ -11,6 +11,12 @@
    --scrollbar-thumb-radius: 5px;
 }
 
+::-webkit-animation {
+   // transform: translate3d(0,0,0);
+   -webkit-transform-style: preserve-3d;
+   -webkit-backface-visibility: hidden;
+}
+
 /* custom scroll (CHROMIUM) */
 
 ::-webkit-scrollbar {
