--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -13,7 +13,7 @@
   .header-logo:hover {
     font-family: "Celebrate-Retro";
     font-size: 1.9rem;
-    transition: .3s!important;
+    transition: .5s!important;
   
   }
 
